[package]
name = "fs_eventbridge"
version = "0.1.0"
authors = [
	"TechnologyAdvice <devteam@technologyadvice.com>",
	"Tom Shawver <tom@frosteddesign.com>"
]
description = "A TCP server to stream file-change events to a remote destination"
documentation = "https://github.com/TechnologyAdvice/fs_eventbridge/blob/master/README.md"
repository = "https://github.com/TechnologyAdvice/fs_eventbridge"
readme = "README.md"
keywords = ["fsevents", "kqueue", "inotify", "docker", "boot2docker"]
license = "ISC"

[dependencies]
regex = "0.1.77"
lazy_static = "0.2.1"
filetime = "0.1.10"
time = "0.1.35"
clap = "2"
