[package]
name = "fs_eventbridge"
version = "0.1.0"
authors = [
	"Tom Shawver <tom@frosteddesign.com>"
]
description = "A TCP server to stream file-change events to a remote destination or VM"
documentation = "https://github.com/TomFrost/fs_eventbridge/blob/master/README.md"
repository = "https://github.com/TomFrost/fs_eventbridge"
readme = "README.md"
keywords = ["fsevents", "kqueue", "inotify", "docker", "boot2docker"]
license = "ISC"

[[bin]]
path = "src/main.rs"
name = "fs_eventbridge"

[dependencies]
regex = "0.1.77"
lazy_static = "0.2.1"
filetime = "0.1.10"
time = "0.1.35"
clap = "2"
